--- a/debian/rules
+++ b/debian/rules
@@ -1,26 +1,26 @@
 #!/usr/bin/make -f
 
-# See debhelper(7) (uncomment to enable).
-# Output every command that modifies files on the build system.
-#export DH_VERBOSE = 1
+# Enable hardening build flags
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
-
-# See FEATURE AREAS in dpkg-buildflags(1).
-#export DEB_BUILD_MAINT_OPTIONS = hardening=+all
-
-# See ENVIRONMENT in dpkg-buildflags(1).
-# Package maintainers to append CFLAGS.
-#export DEB_CFLAGS_MAINT_APPEND  = -Wall -pedantic
-# Package maintainers to append LDFLAGS.
-#export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
-
+# Include all dpkg-buildflags
+include /usr/share/dpkg/buildflags.mk
 
 %:
 	dh $@
 
+override_dh_auto_configure:
+	./configure --prefix=/usr --libdir=/lib/$(DEB_HOST_MULTIARCH) --datadir=/lib --with-types=all
 
-# dh_make generated override targets.
-# This is an example for Cmake (see <https://bugs.debian.org/641051>).
-#override_dh_auto_configure:
-#	dh_auto_configure -- \
-#	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
+override_dh_auto_build:
+	$(MAKE)
+
+override_dh_auto_install:
+	$(MAKE) install DESTDIR=$(CURDIR)/debian/libnss-altfiles
+
+override_dh_auto_clean:
+	[ ! -f Makefile ] || $(MAKE) distclean
+	rm -f config.mk
+
+# Skip tests as there aren't any defined
+override_dh_auto_test:
