--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ override_dh_auto_build:
 	$(MAKE)
 
 override_dh_auto_install:
-	$(MAKE) install DESTDIR=$(CURDIR)/debian/libnss-altfiles
+	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
 
 override_dh_auto_clean:
 	[ ! -f Makefile ] || $(MAKE) distclean
